<resources>
    <string name="app_name">LearnWords</string>

    <string name="caption_new_word">New word</string>
    <string name="caption_edit_word">Edit word</string>
    <string name="caption_variant">Learning</string>
    <string name="caption_input">Testing</string>
    <string name="caption_list_word">Dictionary</string>
    <string name="caption_ie">Import/export</string>
    <string name="caption_settings">Settings</string>

    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="remove">REMOVE</string>
    <string name="close">CLOSE</string>
    <string name="details">DETAILS</string>
    <string name="menu_order_by_abc">Order by Abc</string>
    <string name="menu_order_by_rating">Order by Rating</string>
    <string name="menu_search">Search</string>

    <string name="end_of_testing">No more words</string>
    <string name="answers_true">Total true answers</string>
    <string name="answers_false">Total false answers</string>

    <string name="english">English</string>
    <string name="english_hint">English word</string>
    <string name="russian">Russian</string>
    <string name="russian_hint">Russian word</string>

    <string name="read">Read</string>
    <string name="write">Write</string>
    <string name="total_loaded">Total new words added</string>
    <string name="total_unloaded">Total words unloaded</string>

    <string name="caption_read_txt_file">Load new words from file
        on SD card</string>
    <string name="hint_read_txt_file">File on SD card for load</string>
    <string name="name_read_txt_file">new_words.txt</string>

    <string name="caption_write_txt_file">Unload my words to the file
        on SD card</string>
    <string name="hint_write_txt_file">File on SD card for unload</string>
    <string name="name_write_txt_file">my_words.txt</string>

    <string name="caption_read_json_file">Load DB from JSON file
        on SD card </string>
    <string name="hint_read_json_file">File on SD card for load</string>
    <string name="name_read_json_file">my_words.json</string>

    <string name="caption_write_json_file">Unload my DB to the JSON file
        on SD card </string>
    <string name="hint_write_json_file">File on SD card for unload</string>
    <string name="name_write_json_file">my_words.json</string>

    <string name="know">Know</string>
    <string name="dont_know">Don\'t know</string>
    <string name="next">Next</string>
    <string name="translate">Translate</string>

    <string name="mes_not_found">Not found</string>

</resources>
