<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/tv_caption_ie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/caption_import_export"
        android:gravity="center_horizontal"
        android:textSize="@dimen/font_size_big" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/bg_white"
                android:padding="@dimen/button_layout_margin"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/tvIELoadWords"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/caption_read_txt_file"
                    android:textSize="@dimen/font_size_small" />

                <EditText
                    android:id="@+id/etFileLoadWords"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_read_txt_file"
                    android:inputType="textPersonName"
                    android:text="@string/name_read_txt_file" />

                <Button
                    android:id="@+id/btnLoadNewWords"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/read" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/bg_white"
                android:padding="@dimen/button_layout_margin"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/tvIEUnLoadWords"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/caption_write_txt_file"
                    android:textSize="@dimen/font_size_small" />

                <EditText
                    android:id="@+id/etFileUnLoadWords"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_write_txt_file"
                    android:inputType="textPersonName"
                    android:text="@string/name_write_txt_file" />

                <Button
                    android:id="@+id/btnUnLoadNewWords"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/write" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/bg_white"
                android:padding="@dimen/button_layout_margin"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/tvIELoadDB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/caption_read_json_file"
                    android:textSize="@dimen/font_size_small" />

                <EditText
                    android:id="@+id/etFileLoadDB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_read_json_file"
                    android:inputType="textPersonName"
                    android:text="@string/name_read_json_file" />

                <Button
                    android:id="@+id/btnLoadNewDB"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/read" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@color/bg_white"
                android:padding="@dimen/button_layout_margin"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/tvIEUnLoadDB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/caption_write_json_file"
                    android:textSize="@dimen/font_size_small" />

                <EditText
                    android:id="@+id/etFileUnLoadDB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_write_json_file"
                    android:inputType="textPersonName"
                    android:text="@string/name_write_json_file" />

                <Button
                    android:id="@+id/btnUnLoadNewDB"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/write" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>