<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:text="TextView eng"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvLearnEng"
        android:layout_marginTop="80dp"
        android:gravity="center_horizontal"/>

    <TextView
        android:text="TextView rus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvLearnRus"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"/>


    <TextView
        android:text="Result "
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tvLearnResult"
        android:layout_marginTop="20dp"
        android:gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center_horizontal|bottom">

        <Button
            android:text="@string/dont_know"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="100"
            android:id="@+id/btnDontKnow"/>

        <Button
            android:text="@string/next"
            android:layout_weight="100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnNext"/>

        <Button
            android:text="@string/know"
            android:layout_weight="100"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnKnow"/>
    </LinearLayout>


</LinearLayout>