<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <!-- Размещаем тулбар, который наполним уже в коде с помощью отдельного шаблона  -->
    <include layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="100"
        android:gravity="center_horizontal|center_vertical"
        android:orientation="vertical"
        android:padding="@dimen/ll_padding">

        <ImageView
            android:id="@+id/ivResult"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginBottom="11dp"
            android:src="@drawable/correctly_icon"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tvLearnEng"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="TextView eng"
            android:textSize="@dimen/font_size_big" />

        <TextView
            android:id="@+id/tvLearnRus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center_horizontal"
            android:text="TextView rus"
            android:textColor="@color/colorGreen"
            android:textSize="@dimen/font_size_big" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/etTranslateLayout">

            <EditText
                android:id="@+id/etTranslate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/translate"
                android:lines="1"
                android:maxLines="1" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_know_buttons"
        android:layout_width="match_parent"
        android:layout_height="@dimen/ll_height_for_button"
        android:gravity="center_horizontal|bottom"
        android:orientation="horizontal"
        android:padding="@dimen/ll_padding">

        <Button
            android:id="@+id/btnDontKnow"
            style="@style/ButtonRed"
            android:text="@string/dont_know" />

        <Button
            android:id="@+id/btnCheck"
            style="@style/ButtonGreen"
            android:text="@string/ok"
            android:enabled="false"/>
    </LinearLayout>

</LinearLayout>